--- a/src/app.css
+++ b/src/app.css
@@ -61,6 +61,9 @@
     }
 }
 
+body {
+    overflow-x: hidden;
+}
 .type-line::after {
     content: '';
     position: absolute;
@@ -87,4 +90,16 @@
     position: relative;
     overflow: hidden;
 }
+
+.bg-dots {
+    background-image: linear-gradient(#0d0d0d, #0000), linear-gradient(#000000bf, #000000bf), url("src/assets/bg-dots.png");
+}
+.bg-dots-clear {
+    background-image: linear-gradient(rgba(20, 20, 20, 0.9), rgba(10, 10, 10, 0.9)), url("src/assets/bg-dots.png");
+    background-position: 10%;
+}
+.bg-mesh {
+    background-image: linear-gradient(#0d0d0d, #0000), linear-gradient(rgba(0, 0, 0, 0.90), rgba(0, 0, 0, 0.8)), url("src/assets/mesh.webp");
+}
+
 
